# discovery

./: README.html  explore.html  index.html  print.html
01-background/: README.html
02-requirements/: README.html
03-setup/: README.html  linux.html  macos.html  verify.html  windows.html
04-meet-your-hardware/: README.html
05-led-roulette/: README.html  build-it.html  debug-it.html  flash-it.html  my-solution.html  the-challenge.html  the-led-and-delay-modules.html
06-hello-world/: README.html  panic.html
07-registers/: README.html  bad-address.html  optimization.html  rtrm.html  spooky-action-at-a-distance.html  type-safe-manipulation.html
08-leds-again/: README.html  configuration.html  power.html
09-clocks-and-timers/: README.html  busy-waiting.html  for-loop-delays.html  initialization.html  nop.html  one-shot-timer.html  putting-it-all-together.html
10-serial-communication/: README.html  loopbacks.html  nix-tooling.html  windows-tooling.html
11-usart/: README.html  buffer-overrun.html  echo-server.html  my-solution.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html  uprintln.html
12-bluetooth-setup/: README.html  linux.html  loopback.html
13-serial-over-bluetooth/: README.html
14-i2c/: README.html  lsm303dlhc.html  read-a-single-register.html  read-several-registers.html  the-general-protocol.html  the-solution.html
15-led-compass/: README.html  (+6 more)
src/05-led-roulette/: Cargo.toml
src/05-led-roulette/pg/: Cargo.toml
src/05-led-roulette/pg/src/: lib.rs
src/05-led-roulette/src/: main.rs
(+15 files in other folders)
