[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
name = "led-roulette"
version = "0.1.0"

[dependencies]
pg = { path = "pg" }

[profile.release]
lto = true
opt-level = 3
debug = true

[dependencies.f3]
default-features = false
version = "0.3.0"

[replace]
"f3:0.3.0" = { path = "/Users/manuel/code/misc/rust/novembrs/f3" }

