[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
name = "led-roulette"
version = "0.1.0"

[dependencies]
pg = { path = "pg" }
volatile-register = "0.1.2"
cortex-m = "0.1.3"

[profile.release]
lto = true
opt-level = 3
debug = true

[dependencies.f3]
default-features = false
version = "0.3.0"
features = [
    "default-exception-handler",
    "default-panic-fmt",
    "interrupts",
]

[replace]
"f3:0.3.0" = { path = "/Users/manuel/code/misc/rust/novembrs/f3" }

